# BabaYagaPatrzy

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  GameController.cpp  GameController.hpp  Player.cpp  Player.hpp  README.md  camsettings.hpp  main.cpp  preprocess.cpp  preprocess.hpp  settings.hpp
html/: _game_8cpp.html  _game_8hpp.html  _game_8hpp_source.html  _game_controller_8cpp.html  _game_controller_8hpp.html  _game_controller_8hpp_source.html  _player_8cpp.html  _player_8hpp.html  _player_8hpp_source.html  _r_e_a_d_m_e_8md.html  annotated.html  camsettings_8hpp.html  camsettings_8hpp_source.html  class_game-members.html  class_game.html  class_game_controller-members.html  class_game_controller.html  class_player-members.html  class_player.html  class_preprocess-members.html  class_preprocess.html  classes.html  deprecated.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  preprocess_8cpp.html  preprocess_8hpp.html  preprocess_8hpp_source.html  (+2 more)
latex/: _game_8cpp.tex  _game_8hpp.tex  _game_8hpp_source.tex  _game_controller_8cpp.tex  _game_controller_8hpp.tex  _game_controller_8hpp_source.tex  _player_8cpp.tex  _player_8hpp.tex  _player_8hpp_source.tex  annotated.tex  camsettings_8hpp.tex  camsettings_8hpp_source.tex  class_game.tex  class_game_controller.tex  class_player.tex  class_preprocess.tex  deprecated.tex  files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  refman.tex  (+5 more)
(+38 files in other folders)
